fixing the hero image bug on mobile

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -46,6 +46,10 @@
              rgba($color-primary-dark, .3)),
             url(../img/healthy-sm-2x.jpg);
     }
+
+    @media screen and (hover: none) {
+        background-attachment: scroll;
+    }
 }
 
 .section-about {
